--- a/modules/reprotool.ide/plugin.xml
+++ b/modules/reprotool.ide/plugin.xml
@@ -354,5 +354,29 @@
          </command>
       </menuContribution>
    </extension>
+   <extension
+         point="org.eclipse.ui.editors.markerAnnotationSpecification">
+      <specification
+            annotationType="reprotool.ide.tag"
+            colorPreferenceKey="tagColor"
+            colorPreferenceValue="255,255,0"
+            highlightPreferenceKey="tagHighlight"
+            highlightPreferenceValue="true"
+            includeOnPreferencePage="true"
+            label="Reprotool tag annotation"
+            overviewRulerPreferenceKey="x"
+            overviewRulerPreferenceValue="false"
+            textPreferenceKey="tagText"
+            textPreferenceValue="false"
+            verticalRulerPreferenceKey="x"
+            verticalRulerPreferenceValue="false">
+      </specification>
+   </extension>
+   <extension
+         point="org.eclipse.ui.editors.annotationTypes">
+      <type
+            name="reprotool.ide.tag">
+      </type>
+   </extension>
 
 </plugin>
