--- a/modules/reprotool.ide/plugin.xml
+++ b/modules/reprotool.ide/plugin.xml
@@ -69,6 +69,11 @@
             name="Add actor">
       </command>
       <command
+            defaultHandler="reprotool.ide.commands.EditActor"
+            id="commands.editActor"
+            name="Edit actor">
+      </command>
+      <command
             defaultHandler="reprotool.ide.commands.RemoveActor"
             id="commands.removeActor"
             name="Remove actor">
@@ -339,6 +344,22 @@
          <command
                commandId="commands.removeActor"
                label="Remove actor"
+               style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <with
+                     variable="activeMenuSelection">
+                  <iterate>
+                     <instanceof
+                           value="reprotool.model.swproj.Actor">
+                     </instanceof>
+                  </iterate>
+               </with>
+            </visibleWhen>
+         </command>
+         <command
+               commandId="commands.editActor"
+               label="Edit actor"
                style="push">
             <visibleWhen
                   checkEnabled="false">
