--- a/modules/reprotool.ide/plugin.xml
+++ b/modules/reprotool.ide/plugin.xml
@@ -357,7 +357,7 @@
    <extension
          point="org.eclipse.ui.editors.markerAnnotationSpecification">
       <specification
-            annotationType="reprotool.ide.tag"
+            annotationType="reprotool.ide.stepLabel"
             colorPreferenceKey="tagColor"
             colorPreferenceValue="255,255,0"
             highlightPreferenceKey="tagHighlight"
@@ -375,7 +375,7 @@
    <extension
          point="org.eclipse.ui.editors.annotationTypes">
       <type
-            name="reprotool.ide.tag">
+            name="reprotool.ide.stepLabel">
       </type>
    </extension>
    <extension
