wsj parser model (trained model) 12mb!

--- a/modules/reprotool.ling/build.properties
+++ b/modules/reprotool.ling/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                lib/edu.mit.jwi_2.1.5_jdk.jar,\
-               lib/mxpost.jar
+               lib/mxpost.jar,\
+               lib/dbparser.jar
