--- a/modules/reprotool.ide/.settings/org.eclipse.jdt.ui.prefs
+++ b/modules/reprotool.ide/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,4 @@
-#Fri May 20 10:48:45 CEST 2011
+#Tue Sep 13 07:04:54 CEST 2011
 eclipse.preferences.version=1
-formatter_profile=_almost eclipse
+formatter_profile=_almost-eclipse
 formatter_settings_version=11
