custom EMF model of sentence structure inside reprotool.ling

--- a/modules/reprotool.ling/build.properties
+++ b/modules/reprotool.ling/build.properties
@@ -1,7 +1,16 @@
-source.. = src/
+
+# <copyright>
+# </copyright>
+#
+# $Id$
+
+bin.includes = .,\
+               model/,\
+               META-INF/,\
+               plugin.xml,\
+               plugin.properties,\
+               lib/,\
+               bin/
+jars.compile.order = .
+source.. = src-gen/
 output.. = bin/
-bin.includes = META-INF/,\
-               .,\
-               lib/edu.mit.jwi_2.1.5_jdk.jar,\
-               lib/mxpost.jar,\
-               lib/dbparser.jar
