--- a/modules/reprotool.ling/.classpath
+++ b/modules/reprotool.ling/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src-gen"/>
 	<classpathentry exported="true" kind="lib" path="lib/dbparser.jar" sourcepath="D:/Projects/ReProTool/dbparser/src"/>
 	<classpathentry exported="true" kind="lib" path="lib/edu.mit.jwi_2.1.5_jdk.jar"/>
 	<classpathentry kind="lib" path="lib/anna-2.jar"/>
