- added some debugging tools for NuSMV - implemented first prototype of SMV model that contains: include relation, precede relation, open/close. create/use, trace/on annotations

--- a/modules/reprotool.fm.nusmv/plugin.xml
+++ b/modules/reprotool.fm.nusmv/plugin.xml
@@ -18,5 +18,37 @@
          </action>
       </actionSet>
    </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            defaultHandler="reprotool.fm.nusmv.commands.CheckCTL"
+            id="commands.CheckCTL"
+            name="Check CTL using NuSMV">
+      </command>
+      <command
+            defaultHandler="reprotool.fm.nusmv.commands.SimulateSMV"
+            id="commands.SimulateSMV"
+            name="Simulate SMV model using NuSMV">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:org.eclipse.ui.navigator.ProjectExplorer#PopupMenu">
+         <command
+               commandId="commands.CheckCTL"
+               icon="icons/tick.png"
+               label="Check CTL using NuSMV"
+               style="push">
+         </command>
+         <command
+               commandId="commands.SimulateSMV"
+               icon="icons/tick.png"
+               label="Simulate SMV model using NuSMV"
+               style="push">
+         </command>
+      </menuContribution>
+   </extension>
 
 </plugin>
