--- a/modules/reprotool.model/build.properties
+++ b/modules/reprotool.model/build.properties
@@ -12,3 +12,5 @@ bin.includes = .,\
 jars.compile.order = .
 source.. = src/
 output.. = bin/
+additional.bundles = org.apache.commons.logging,\
+                     org.apache.log4j
