removed few warnings (includes, JVM setup...)

--- a/modules/reprotool.model/build.properties
+++ b/modules/reprotool.model/build.properties
@@ -10,7 +10,8 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties
 jars.compile.order = .
-source.. = src/
+source.. = src/,\
+           src-gen/
 output.. = bin/
 additional.bundles = org.apache.commons.logging,\
                      org.apache.log4j
