new ling model + ling classes - no errors

--- a/modules/reprotool.ling/build.properties
+++ b/modules/reprotool.ling/build.properties
@@ -9,7 +9,8 @@ bin.includes = .,\
                META-INF/,\
                plugin.xml,\
                lib/,\
-               bin/
+               bin/,\
+               plugin.properties
 jars.compile.order = .
 source.. = src-gen/,\
            src/
