--- a/modules/reprotool.fm.nusmv.lang.ui/plugin.xml
+++ b/modules/reprotool.fm.nusmv.lang.ui/plugin.xml
@@ -6,42 +6,42 @@
     <extension
             point="org.eclipse.ui.editors">
         <editor
-            class="reprotool.fm.nusmv.lang.ui.NuSmvInputLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
             contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
             default="true"
-            extensions="nusmv,smv"
-            id="reprotool.fm.nusmv.lang.NuSmvInputLanguage"
-            name="NuSmvInputLanguage Editor">
+            extensions="nusmv"
+            id="reprotool.fm.nusmv.lang.NuSmvLang"
+            name="NuSmvLang Editor">
         </editor>
     </extension>
     <extension
         point="org.eclipse.ui.handlers">
         <handler
-            class="reprotool.fm.nusmv.lang.ui.NuSmvInputLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.editor.hyperlinking.OpenDeclarationHandler"
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.editor.hyperlinking.OpenDeclarationHandler"
             commandId="org.eclipse.xtext.ui.editor.hyperlinking.OpenDeclaration">
             <activeWhen>
                 <reference
-                    definitionId="reprotool.fm.nusmv.lang.NuSmvInputLanguage.Editor.opened">
+                    definitionId="reprotool.fm.nusmv.lang.NuSmvLang.Editor.opened">
                 </reference>
             </activeWhen>
         </handler>
         <handler
-            class="reprotool.fm.nusmv.lang.ui.NuSmvInputLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.editor.handler.ValidateActionHandler"
-            commandId="reprotool.fm.nusmv.lang.NuSmvInputLanguage.validate">
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.editor.handler.ValidateActionHandler"
+            commandId="reprotool.fm.nusmv.lang.NuSmvLang.validate">
          <activeWhen>
             <reference
-                    definitionId="reprotool.fm.nusmv.lang.NuSmvInputLanguage.Editor.opened">
+                    definitionId="reprotool.fm.nusmv.lang.NuSmvLang.Editor.opened">
             </reference>
          </activeWhen>
       </handler>
     </extension>
     <extension point="org.eclipse.core.expressions.definitions">
-        <definition id="reprotool.fm.nusmv.lang.NuSmvInputLanguage.Editor.opened">
+        <definition id="reprotool.fm.nusmv.lang.NuSmvLang.Editor.opened">
             <and>
                 <reference definitionId="isActiveEditorAnInstanceOfXtextEditor"/>
                 <with variable="activeEditor">
                     <test property="org.eclipse.xtext.ui.editor.XtextEditor.languageName" 
-                        value="reprotool.fm.nusmv.lang.NuSmvInputLanguage" 
+                        value="reprotool.fm.nusmv.lang.NuSmvLang" 
                         forcePluginActivation="true"/>
                 </with>        
             </and>
@@ -50,37 +50,50 @@
     <extension
             point="org.eclipse.ui.preferencePages">
         <page
-            class="reprotool.fm.nusmv.lang.ui.NuSmvInputLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.editor.preferences.LanguageRootPreferencePage"
-            id="reprotool.fm.nusmv.lang.NuSmvInputLanguage"
-            name="NuSmvInputLanguage">
-            <keywordReference id="reprotool.fm.nusmv.lang.ui.keyword_NuSmvInputLanguage"/>
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.editor.preferences.LanguageRootPreferencePage"
+            id="reprotool.fm.nusmv.lang.NuSmvLang"
+            name="NuSmvLang">
+            <keywordReference id="reprotool.fm.nusmv.lang.ui.keyword_NuSmvLang"/>
         </page>
         <page
-            category="reprotool.fm.nusmv.lang.NuSmvInputLanguage"
-            class="reprotool.fm.nusmv.lang.ui.NuSmvInputLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.editor.syntaxcoloring.SyntaxColoringPreferencePage"
-            id="reprotool.fm.nusmv.lang.NuSmvInputLanguage.coloring"
+            category="reprotool.fm.nusmv.lang.NuSmvLang"
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.editor.syntaxcoloring.SyntaxColoringPreferencePage"
+            id="reprotool.fm.nusmv.lang.NuSmvLang.coloring"
             name="Syntax Coloring">
-            <keywordReference id="reprotool.fm.nusmv.lang.ui.keyword_NuSmvInputLanguage"/>
+            <keywordReference id="reprotool.fm.nusmv.lang.ui.keyword_NuSmvLang"/>
         </page>
         <page
-            category="reprotool.fm.nusmv.lang.NuSmvInputLanguage"
-            class="reprotool.fm.nusmv.lang.ui.NuSmvInputLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.editor.templates.XtextTemplatePreferencePage"
-            id="reprotool.fm.nusmv.lang.NuSmvInputLanguage.templates"
+            category="reprotool.fm.nusmv.lang.NuSmvLang"
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.editor.templates.XtextTemplatePreferencePage"
+            id="reprotool.fm.nusmv.lang.NuSmvLang.templates"
             name="Templates">
-            <keywordReference id="reprotool.fm.nusmv.lang.ui.keyword_NuSmvInputLanguage"/>
+            <keywordReference id="reprotool.fm.nusmv.lang.ui.keyword_NuSmvLang"/>
+        </page>
+    </extension>
+    <extension
+            point="org.eclipse.ui.propertyPages">
+        <page
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.editor.preferences.LanguageRootPreferencePage"
+            id="reprotool.fm.nusmv.lang.NuSmvLang"
+            name="NuSmvLang">
+            <keywordReference id="reprotool.fm.nusmv.lang.ui.keyword_NuSmvLang"/>
+            <enabledWhen>
+	            <adapt type="org.eclipse.core.resources.IProject"/>
+			</enabledWhen>
+	        <filter name="projectNature" value="org.eclipse.xtext.ui.shared.xtextNature"/>
         </page>
     </extension>
     <extension
         point="org.eclipse.ui.keywords">
         <keyword
-            id="reprotool.fm.nusmv.lang.ui.keyword_NuSmvInputLanguage"
-            label="NuSmvInputLanguage"/>
+            id="reprotool.fm.nusmv.lang.ui.keyword_NuSmvLang"
+            label="NuSmvLang"/>
     </extension>
     <extension
          point="org.eclipse.ui.commands">
       <command
             description="Trigger expensive validation"
-            id="reprotool.fm.nusmv.lang.NuSmvInputLanguage.validate"
+            id="reprotool.fm.nusmv.lang.NuSmvLang.validate"
             name="Validate">
       </command>
     </extension>
@@ -88,12 +101,12 @@
         <menuContribution
             locationURI="popup:#TextEditorContext?after=group.edit">
              <command
-                 commandId="reprotool.fm.nusmv.lang.NuSmvInputLanguage.validate"
+                 commandId="reprotool.fm.nusmv.lang.NuSmvLang.validate"
                  style="push"
                  tooltip="Trigger expensive validation">
             <visibleWhen checkEnabled="false">
                 <reference
-                    definitionId="reprotool.fm.nusmv.lang.NuSmvInputLanguage.Editor.opened">
+                    definitionId="reprotool.fm.nusmv.lang.NuSmvLang.Editor.opened">
                 </reference>
             </visibleWhen>
          </command>  
@@ -103,7 +116,7 @@
 		<menuContribution locationURI="popup:#TextEditorContext?endof=group.find">
 			<command commandId="org.eclipse.xtext.ui.editor.FindReferences">
 				<visibleWhen checkEnabled="false">
-                	<reference definitionId="reprotool.fm.nusmv.lang.NuSmvInputLanguage.Editor.opened">
+                	<reference definitionId="reprotool.fm.nusmv.lang.NuSmvLang.Editor.opened">
                 	</reference>
             	</visibleWhen>
 			</command>
@@ -111,11 +124,11 @@
 	</extension>
 	<extension point="org.eclipse.ui.handlers">
 	    <handler
-            class="reprotool.fm.nusmv.lang.ui.NuSmvInputLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.editor.findrefs.FindReferencesHandler"
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.editor.findrefs.FindReferencesHandler"
             commandId="org.eclipse.xtext.ui.editor.FindReferences">
             <activeWhen>
                 <reference
-                    definitionId="reprotool.fm.nusmv.lang.NuSmvInputLanguage.Editor.opened">
+                    definitionId="reprotool.fm.nusmv.lang.NuSmvLang.Editor.opened">
                 </reference>
             </activeWhen>
         </handler>
@@ -126,13 +139,13 @@
 	<extension
 		point="org.eclipse.emf.ecore.extension_parser">
 		<parser
-			class="reprotool.fm.nusmv.lang.ui.NuSmvInputLanguageExecutableExtensionFactory:org.eclipse.xtext.resource.IResourceFactory"
+			class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.resource.IResourceFactory"
 			type="nusmv">
 		</parser>
 	</extension>
 	<extension point="org.eclipse.xtext.extension_resourceServiceProvider">
         <resourceServiceProvider
-            class="reprotool.fm.nusmv.lang.ui.NuSmvInputLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.resource.IResourceUIServiceProvider"
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.resource.IResourceUIServiceProvider"
             uriExtension="nusmv">
         </resourceServiceProvider>
     </extension>
@@ -142,19 +155,43 @@
    <extension
          point="org.eclipse.xtext.builder.participant">
       <participant
-            class="reprotool.fm.nusmv.lang.ui.NuSmvInputLanguageExecutableExtensionFactory:org.eclipse.xtext.builder.IXtextBuilderParticipant">
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.builder.IXtextBuilderParticipant">
       </participant>
    </extension>
+   <extension
+            point="org.eclipse.ui.preferencePages">
+        <page
+            category="reprotool.fm.nusmv.lang.NuSmvLang"
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.builder.preferences.BuilderPreferencePage"
+            id="reprotool.fm.nusmv.lang.NuSmvLang.compiler.preferencePage"
+            name="Compiler">
+            <keywordReference id="reprotool.fm.nusmv.lang.ui.keyword_NuSmvLang"/>
+        </page>
+    </extension>
+    <extension
+            point="org.eclipse.ui.propertyPages">
+        <page
+            category="reprotool.fm.nusmv.lang.NuSmvLang"
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.builder.preferences.BuilderPreferencePage"
+            id="reprotool.fm.nusmv.lang.NuSmvLang.compiler.propertyPage"
+            name="Compiler">
+            <keywordReference id="reprotool.fm.nusmv.lang.ui.keyword_NuSmvLang"/>
+            <enabledWhen>
+	            <adapt type="org.eclipse.core.resources.IProject"/>
+			</enabledWhen>
+	        <filter name="projectNature" value="org.eclipse.xtext.ui.shared.xtextNature"/>
+        </page>
+    </extension>
 
 	<!-- Quick Outline -->
 	<extension
 		point="org.eclipse.ui.handlers">
 		<handler 
-			class="reprotool.fm.nusmv.lang.ui.NuSmvInputLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.editor.outline.quickoutline.ShowQuickOutlineActionHandler"
+			class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.editor.outline.quickoutline.ShowQuickOutlineActionHandler"
 			commandId="org.eclipse.xtext.ui.editor.outline.QuickOutline">
 			<activeWhen>
 				<reference
-					definitionId="reprotool.fm.nusmv.lang.NuSmvInputLanguage.Editor.opened">
+					definitionId="reprotool.fm.nusmv.lang.NuSmvLang.Editor.opened">
 				</reference>
 			</activeWhen>
 		</handler>
@@ -174,7 +211,7 @@
 				style="push"
 				tooltip="Open Quick Outline">
 				<visibleWhen checkEnabled="false">
-					<reference definitionId="reprotool.fm.nusmv.lang.NuSmvInputLanguage.Editor.opened"/>
+					<reference definitionId="reprotool.fm.nusmv.lang.NuSmvLang.Editor.opened"/>
 				</visibleWhen>
 			</command>
 		</menuContribution>
@@ -183,9 +220,62 @@
    <extension
          point="org.eclipse.ui.ide.markerResolution">
       <markerResolutionGenerator
-            class="reprotool.fm.nusmv.lang.ui.NuSmvInputLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.editor.quickfix.MarkerResolutionGenerator">
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.editor.quickfix.MarkerResolutionGenerator">
       </markerResolutionGenerator>
    </extension>
+   	<!-- Rename Refactoring -->
+	<extension point="org.eclipse.ui.handlers">
+		<handler 
+			class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.refactoring.ui.IRenameElementHandler"
+			commandId="org.eclipse.xtext.ui.refactoring.RenameElement">
+			<activeWhen>
+				<reference
+					definitionId="reprotool.fm.nusmv.lang.NuSmvLang.Editor.opened">
+				</reference>
+			</activeWhen>
+		</handler>
+	</extension>
+    <extension point="org.eclipse.ui.menus">
+         <menuContribution
+            locationURI="popup:#TextEditorContext?after=group.edit">
+         <command commandId="org.eclipse.xtext.ui.refactoring.RenameElement"
+               style="push">
+            <visibleWhen checkEnabled="false">
+               <reference
+                     definitionId="reprotool.fm.nusmv.lang.NuSmvLang.Editor.opened">
+               </reference>
+            </visibleWhen>
+         </command>
+      </menuContribution>
+   </extension>
+   <extension point="org.eclipse.ui.preferencePages">
+	    <page
+	        category="reprotool.fm.nusmv.lang.NuSmvLang"
+	        class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.refactoring.ui.RefactoringPreferencePage"
+	        id="reprotool.fm.nusmv.lang.NuSmvLang.refactoring"
+	        name="Refactoring">
+	        <keywordReference id="reprotool.fm.nusmv.lang.ui.keyword_NuSmvLang"/>
+	    </page>
+	</extension>
 
+
+  <extension point="org.eclipse.compare.contentViewers">
+    <viewer id="reprotool.fm.nusmv.lang.NuSmvLang.compare.contentViewers"
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.compare.InjectableViewerCreator"
+            extensions="nusmv">
+    </viewer>
+  </extension>
+  <extension point="org.eclipse.compare.contentMergeViewers">
+    <viewer id="reprotool.fm.nusmv.lang.NuSmvLang.compare.contentMergeViewers"
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.compare.InjectableViewerCreator"
+            extensions="nusmv" label="NuSmvLang Compare">
+     </viewer>
+  </extension>
+  <extension point="org.eclipse.ui.editors.documentProviders">
+    <provider id="reprotool.fm.nusmv.lang.NuSmvLang.editors.documentProviders"
+            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.editor.model.XtextDocumentProvider"
+            extensions="nusmv">
+    </provider>
+  </extension>
 
 </plugin>
