benchmark - added actors cleanup - removed libs (already in theirs plugins) ling plugins cleaned conf

--- a/modules/reprotool.ling/plugin.properties
+++ b/modules/reprotool.ling/plugin.properties
@@ -4,5 +4,5 @@
 #
 # $Id$
 
-pluginName = Reprotool Model
-providerName = www.example.org
+pluginName = Reprotool Ling
+providerName = http://code.google.com/a/eclipselabs.org/p/reprotool/
