- using more functional-style programming features of Xtend2 (helper functions moved to ReprotoolMappingExtensions) - instantiation of the mapping class through Google Guice - output goes to the console of a running Eclipse instance

--- a/modules/reprotool.fm.nusmv/plugin.xml
+++ b/modules/reprotool.fm.nusmv/plugin.xml
@@ -36,8 +36,8 @@
             name="SW Project To SMV">
       </command>
       <command
-            defaultHandler="reprotool.fm.nusmv.commands.SwprojToSMVXtextExample"
-            id="reprotool.commands.SwprojToSmvXtext"
+            defaultHandler="reprotool.fm.nusmv.commands.MySampleCommand"
+            id="reprotool.commands.MySampleCommand"
             name="SW Project To SMV (Xtext Example)">
       </command>
    </extension>
@@ -65,9 +65,8 @@
                style="push">
          </command>
          <command
-               commandId="reprotool.commands.SwprojToSmvXtext"
-               icon="icons/swproj2smv.gif"
-               label="Convert SW Project To SMV (Xtext Example)"
+               commandId="reprotool.commands.MySampleCommand"
+               label="My Sample Command"
                style="push">
          </command>
       </menuContribution>
