--- a/modules/reprotool.ide/plugin.xml
+++ b/modules/reprotool.ide/plugin.xml
@@ -8,20 +8,6 @@
             name="ReProTool">
       </category>
       <view
-            category="cz.cuni.mff.reprotool.ide.category_reprotool"
-            class="reprotool.ide.views.LinguisticToolsView"
-            id="cz.cuni.mff.reprotool.ide.views.view_linguistic_tools"
-            name="Linguistic Tools"
-            restorable="true">
-      </view>
-      <view
-            category="cz.cuni.mff.reprotool.ide.category_reprotool"
-            class="reprotool.ide.views.ParsedTreeView"
-            id="cz.cuni.mff.reprotool.ide.view_parsed_tree"
-            name="Parsed Tree"
-            restorable="true">
-      </view>
-      <view
          name="Progress View"
          category="org.eclipse.ui"
          class="org.eclipse.ui.ExtensionFactory:progressView"
@@ -35,7 +21,7 @@
       </view>
       <view
             category="cz.cuni.mff.reprotool.ide.category_reprotool"
-            class="reprotool.ide.views.sentenceanalysis.SentenceAnalysisSheet"
+            class="reprotool.ide.views.sentenceanalysis.step.SentenceAnalysisSheet"
             id="reprotool.ide.views.sentenceanalysis.SentenceAnalysisSheet"
             name="Sentence analysis">
       </view>
