- changed project editor - added conceptual objects to the outline view

--- a/modules/reprotool.model.edit.ext/plugin.properties
+++ b/modules/reprotool.model.edit.ext/plugin.properties
@@ -2,3 +2,4 @@ Bundle-Name = Extension
 
 SoftwareProjectItemProviderExt_Actors=Actors
 SoftwareProjectItemProviderExt_UseCases=Use cases
+SoftwareProjectItemProviderExt_ConceptualObjects=Conceptual objects
