All launch configurations that generate code from EMF models are now accessible from the "Run" menu. These configurations are now located in .launch directory and shared through SVN

--- a/modules/reprotool.ling/build.properties
+++ b/modules/reprotool.ling/build.properties
@@ -14,3 +14,5 @@ jars.compile.order = .
 source.. = src-gen/,\
            src/
 output.. = bin/
+additional.bundles = org.eclipse.emf.mwe2.launch,\
+                     org.eclipse.emf.mwe2.lib
