--- a/modules/reprotool.model/build.properties
+++ b/modules/reprotool.model/build.properties
@@ -14,4 +14,6 @@ source.. = src/,\
            src-gen/
 output.. = bin/
 additional.bundles = org.apache.commons.logging,\
-                     org.apache.log4j
+                     org.apache.log4j,\
+                     org.eclipse.emf.mwe2.launch,\
+                     org.eclipse.emf.mwe2.lib
