--- a/modules/reprotool.fm.nusmv.lang/build.properties
+++ b/modules/reprotool.fm.nusmv.lang/build.properties
@@ -4,3 +4,6 @@ source.. = src/,\
 bin.includes = META-INF/,\
                .,\
                plugin.xml
+additional.bundles = org.eclipse.emf.mwe2.launch,\
+                     org.eclipse.emf.mwe2.lib,\
+                     org.eclipse.emf.mwe.utils
