--- a/modules/reprotool.txtspec.ui/plugin.xml
+++ b/modules/reprotool.txtspec.ui/plugin.xml
@@ -6,12 +6,13 @@
     <extension
             point="org.eclipse.ui.editors">
         <editor
-            class="reprotool.txtspec.ui.TxtSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
-            contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
-            default="true"
-            extensions="txtspec"
-            id="reprotool.txtspec.TxtSpec"
-            name="TxtSpec Editor">
+              class="reprotool.txtspec.ui.TxtSpecExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
+              contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
+              default="true"
+              extensions="txtspec"
+              icon="icons/txtspec-icon.png"
+              id="reprotool.txtspec.TxtSpec"
+              name="TxtSpec Editor">
         </editor>
     </extension>
     <extension
