--- a/modules/reprotool.txtspec/plugin.xml
+++ b/modules/reprotool.txtspec/plugin.xml
@@ -5,7 +5,7 @@
 
   <extension point="org.eclipse.emf.ecore.generated_package">
     <package 
-       uri = "http://d3s.mff.cuni.cz/reprotool/txtspec" 
+       uri = "http://eclipselabs.org/reprotool/txtspec" 
        class = "reprotool.txtspec.txtSpec.TxtSpecPackage"
        genModel = "reprotool/txtspec/TxtSpec.genmodel" /> 
 	
