--- a/modules/reprotool.uc.tempeditor/build.properties
+++ b/modules/reprotool.uc.tempeditor/build.properties
@@ -1,5 +1,18 @@
-source.. = src/
+
+# <copyright>
+# </copyright>
+#
+# $Id$
+
+bin.includes = .,\
+               model/,\
+               META-INF/,\
+               plugin.xml,\
+               bin/,\
+               plugin.properties
+jars.compile.order = .
+source.. = src-gen/,\
+           src/
 output.. = bin/
-bin.includes = META-INF/,\
-               .,\
-               plugin.xml
+additional.bundles = org.eclipse.emf.mwe2.launch,\
+                     org.eclipse.emf.mwe2.lib
