minor fixes, added icons

--- a/modules/reprotool.fm.nusmv/build.properties
+++ b/modules/reprotool.fm.nusmv/build.properties
@@ -6,3 +6,5 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                examples/
+additional.bundles = org.eclipse.emf.mwe2.launch,\
+                     org.eclipse.emf.mwe2.lib
