--- a/modules/reprotool.fm.nusmv.lang.ui/plugin.xml
+++ b/modules/reprotool.fm.nusmv.lang.ui/plugin.xml
@@ -6,12 +6,13 @@
     <extension
             point="org.eclipse.ui.editors">
         <editor
-            class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
-            contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
-            default="true"
-            extensions="nusmv"
-            id="reprotool.fm.nusmv.lang.NuSmvLang"
-            name="NuSmvLang Editor">
+              class="reprotool.fm.nusmv.lang.ui.NuSmvLangExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
+              contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
+              default="true"
+              extensions="nusmv"
+              icon="icons/nusmv-code-icon.png"
+              id="reprotool.fm.nusmv.lang.NuSmvLang"
+              name="NuSmvLang Editor">
         </editor>
     </extension>
     <extension
