--- a/modules/reprotool.maven.parent/pom.xml
+++ b/modules/reprotool.maven.parent/pom.xml
@@ -23,6 +23,24 @@
 			<layout>p2</layout>
 			<url>http://download.eclipse.org/releases/indigo/</url>
 		</repository>
+		<repository>
+			<id>eclipse-modeling</id>
+			<layout>p2</layout>
+			<url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/</url>
+		</repository>
+		<repository>
+			<id>nusmv</id>
+			<layout>p2</layout>
+			<url>http://metrikforge.informatik.hu-berlin.de/p2-repositories/nusmv-tools/release/</url>
+		</repository>
+		<repository>
+			<id>maven.eclipse.org</id>
+			<url>http://maven.eclipse.org/nexus/content/groups/public/</url>
+		</repository>
+		<repository>
+			<id>xtend</id>
+			<url>http://build.eclipse.org/common/xtend/maven/</url>
+		</repository>
 	</repositories>
 	<build>
 		<plugins>
@@ -86,6 +104,16 @@
 		</plugins>
 	</build>
 	<pluginRepositories>
+		<pluginRepository>
+			<id>sonatype</id>
+			<url>http://repository.sonatype.org/content/groups/sonatype-public-grid/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</pluginRepository>
 		<!-- Fornax Workflow Runner plugin -->
 		<pluginRepository>
 			<id>fornax</id>
