--- a/modules/reprotool.model/pom.xml
+++ b/modules/reprotool.model/pom.xml
@@ -113,7 +113,7 @@
 						</goals>
 						<configuration>
 							<workflowEngine>mwe2</workflowEngine>
-							<workflowDescriptor>reprotool.model</workflowDescriptor>
+							<workflowDescriptor>reprotool.model.GenerateReprotoolModel</workflowDescriptor>
 							<timestampFileName>emf-generator.timestamp</timestampFileName>
 							<!-- <jvmSettings> <fork>true</fork> <jvmArgs> <jvmArg>-Xms100m</jvmArg> 
 								<jvmArg>-Xmx700m</jvmArg> <jvmArg>-XX:MaxPermSize=128m</jvmArg> <jvmArg>-Dlog4j.configuration=file:${basedir}/log4j.properties</jvmArg> 
