jenkins test - changed build.properties to enable jenkins build

--- a/modules/reprotool.model/build.properties
+++ b/modules/reprotool.model/build.properties
@@ -10,8 +10,7 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties
 jars.compile.order = .
-source.. = src/,\
-           src-gen/
+source.. = src/,src-gen
 output.. = bin/
 additional.bundles = org.apache.commons.logging,\
                      org.apache.log4j,\
