--- a/modules/reprotool.model/build.properties
+++ b/modules/reprotool.model/build.properties
@@ -12,6 +12,4 @@ jars.compile.order = .
 source.. = src/,src-gen
 output.. = bin/
 additional.bundles = org.apache.commons.logging,\
-                     org.apache.log4j,\
-                     org.eclipse.emf.mwe2.launch,\
-                     org.eclipse.emf.mwe2.lib
+                     org.apache.log4j
